FlightPath 6.x Changelog
========================

2021-08-05
  Added styling for "date" and "time" form element types.
  
  Added "major student progress" report to core system reports.
  
  Updated various reports (from stats module) to handle school_id in some way.
  

2021-08-04
  Removed out-of-date setting for student_search, where we can only search for majors in the current catalog year.
  
  Got rid of the course_search "report" where you can download offerings as CSV.  Should be under stats anyway.  For now,
  simply removed.
  
  Updated parts of course_search (dealing with getting syllabus) to only use course_id in queries.
  
  Updated add new degree and copy degree to pay attention to school_id.
  
  Added new icons to system, and made sure all core modules had an icon associated with them in the Admin Console.
  
  Changed the way we denote that we are NOT overriding a core variable.  Instead of deleting from table, we mark it as 'no'
  
  Added multi-school functionality to audit settings.
  
  Added multi-school functionality to course search settings.
  
  Fixed bug with upcoming appointments.
  
  If using schools, made it so the advising snapshot lets you switch between schools.
  

2021-08-03
  Added new variable_delete() function to db.inc.
  
  Added new variable_exists() function to db.inc.  Returns TRUE or FALSE if the variable is even in the variables table.
  
  Changed schools module to let us override default school settings on a *per field* level.
  
  Modified how variable_get_for_school() checks to see if we are overriding the default school's val.
  
  Modified admin's edit-advising-settings to handle multiple schools.
  
  Fixed bug where db's update_course_requirement_by_name was trying to use school_id in tables which didn't have it.


2021-08-02
  Added new menu type:  MENU_TYPE_DEFAULT_TAB. This is a tab which otherwise behaves like a MENU_TYPE_NORMAL_ITEM.
  